# portfolio-clearinghouse

./: .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.py  run.sh  rundbinit.py
data/: cpty_a.2026-01-13.csv  cpty_a.2026-01-14.csv  cpty_a.2026-01-15.csv  cpty_a.2026-01-16.csv  position.2026-01-13.yaml  position.2026-01-14.yaml  position.2026-01-15.yaml  position.2026-01-16.yaml  position.yaml
initdb/: init.sql
portfolio/: app.py  dao.py  handler.py  models_db.py  models_io.py  routes.py
script/: tabulate_reconciliation.py
static/: index.css  index.html
tests/: conftest.py  test_handler.py  test_models_io.py  test_routes.py
