[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Hindanov"}
]
readme = "README.md"
requires-python = ">=3.14.0, <3.15.0"
dependencies = [
    "flask[async] (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "a2wsgi (>=1.10.10,<2.0.0)",
    "flask-openapi3[swagger] (>=4.3.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
